<resources>
    <string name="app_name">TemperatureConvert</string>
    <string name="action_settings">Settings</string>
    <string name="showText">Hello!</string>
    <string name="button">button</string>
    <string name="teamName">TeamA</string>
    <string name="score">0</string>
    <string name="scoreB">0</string>
    <string name="lable_3">+3 points</string>
    <string name="lable_2">+2 points</string>
    <string name="lable_1">+1 point</string>
    <string name="reset_value">reset</string>

    <string name="input_hint">Input RMB: </string>
    <string name="click">click to convert</string>
    <string name="euro">to EURO</string>
    <string name="won">to WON</string>
    <string name="dollar">to Dollar</string>
    <string name="save">save</string>
    <string name="setting">setting</string>
</resources>
